--- a/main/src/page/index/index.css
+++ b/main/src/page/index/index.css
@@ -137,16 +137,20 @@ button[type=submit] {
 .modal {
     display: none;
     position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
+    padding-top: 10%;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: white;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
-    position: center;
+    position: relative;
+    background-color: white;
     margin: auto;
     padding: 0;
     border: 0;
