--- a/main/src/page/index/index.css
+++ b/main/src/page/index/index.css
@@ -16,6 +16,7 @@
     margin-right: auto;
     margin-left: auto;
     justify-content: center;
+    color: #000000;
 }
 
 .container .row {
@@ -150,7 +151,7 @@ button[type=submit] {
 
 .modal-content {
     position: relative;
-    background-color: white;
+    background-color: #ffffff;
     margin: auto;
     padding: 0;
     border: 0;
