--- a/main/src/page/index/index.css
+++ b/main/src/page/index/index.css
@@ -13,9 +13,10 @@
 .container {
     padding-right: 15px;
     padding-left: 15px;
+    padding-bottom: 5px;
     margin-right: auto;
     margin-left: auto;
-    justify-content: center;
+    margin-bottom: auto;
     color: #000000;
 }
 
@@ -110,7 +111,7 @@ button {
     cursor: pointer;
 }
 
-button[type=submit] {
+button[type=submit], button[type=button] {
     background-color: cornflowerblue;
     border: 0;
     border-radius: 15px;
