Do: => Add assinatura line.

--- a/main/src/page/index/index.css
+++ b/main/src/page/index/index.css
@@ -117,6 +117,15 @@ span {
     float: right;
 }
 
+.span-write-data {
+    text-align: left;
+}
+
+.assinatura-line {
+    border-bottom: 4px groove;
+    width: 400px;
+}
+
 button {
     background-color: transparent;
     border: 0;
